--- a/src/index.html
+++ b/src/index.html
@@ -2,43 +2,77 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="./assets/images/favicon-32x32.png" type="image/png">
+    <link
+      rel="shortcut icon"
+      href="./assets/images/favicon-32x32.png"
+      type="image/png"
+    />
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <title>intro-component-with-sign-up-form</title>
   </head>
   <body>
     <main class="main">
-      <div class="main__item">
+      <div class="info">
         <h2 class="title">Learn to code by watching others</h2>
-        <p class="text">See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable. </p>
+        <p class="text">
+          See how experienced developers solve problems in real-time. Watching
+          scripted tutorials is great, but understanding how developers think is
+          invaluable.
+        </p>
       </div>
-      <div class="main__container">
-        <a class="button text--button" href="#"><span class="text--bold">Try it free 7 days </span>then $20/mo. thereafter</a>
-        <div class="container">
-          <div class="form__container">
-            <div class="form__field">
-              <label class="label" for="first-name">First Name</label>
-              <input class="input" type="text" id="first-name" name="firts-name">
-            </div>
-            <div class="form__field">
-              <label class="label"  for="last-name">Last Name</label>
-              <input class="input"  type="text" id="last-name" name="last-name">
-            </div>
-            <div class="form__field">
-              <label class="label"  for="email">Email Address</label>
-              <input class="input"  type="text" id="email" name="email">
-            </div>
-            <div class="form__field">
-              <label class="label"  for="password">Password</label>
-              <input class="input"  type="text" id="password" name="password">
-            </div>
-          </div>
-          <input class="submit" type="submit" value="CLAIM YOUR FREE TRIAL" />
-          <p class="text">By clicking the button, you are agreeing to our <span class="text--pink">Terms and Services</span></p>
+      <div class="form__container">
+        <div class="cta">
+          <p class="text--cta">
+            <span class="text--bold">Try it free 7 days </span>then $20/mo.
+            thereafter
+          </p>
+        </div>
+        <div class="form__item">
+          <input
+            placeholder="First Name"
+            class="form__input"
+            type="text"
+            id="first-name"
+            name="first-name"
+          />
+          <input
+            placeholder="Last Name"
+            class="form__input"
+            type="text"
+            id="last-name"
+            name="last-name"
+          />
+          <input
+            placeholder="Email Address"
+            class="form__input"
+            type="text"
+            id="last-name"
+            name="last-name"
+          />
+          <input
+            placeholder="Password"
+            class="form__input"
+            type="text"
+            z
+            id="password"
+            name="password"
+          />
+          <input
+            class="form__submit"
+            type="submit"
+            value="CLAIM YOUR FREE TRIAL"
+          />
+          <p class="text--small">
+            By clicking the button, you are agreeing to our
+            <a class="text--pink">Terms and Services</a>
+          </p>
         </div>
       </div>
     </main>
